--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -11,7 +11,8 @@
       <%= for user <- @users do %>
       <tr>
         <td><%= user["login"] %></td>
-        <td><%= get_email(user["login"]) %></td>
+        <!-- <td><%= get_email(user["login"]) %></td> -->
+        <td>Email</td>
         <td><%= user["html_url"] %></td>
         <td><%= user["score"] %></td>
       </tr>
